View Issue Details

IDProjectCategoryView StatusLast Update
0033737Open CASCADEOCCT:Data Exchangepublic2024-07-18 20:52
Reporterdpasukhi Assigned Tobugmaster  
PrioritynormalSeverityfeature 
Status verifiedResolutionfixed 
Target Version7.9.0Fixed in Version7.9.0 
Summary0033737: Data Exchange, XCAF - Implementing filter tree functionality
DescriptionNeeds to extend XCAFDoc_Editor with new functionality to filter tree by input labels with keeping structure.
The main goal is to simplify XCAF and keep only necessary leaf with related structure.
Additionally, needs to prepare DRAW command for that.
Steps To ReproduceNot required
TagsNo tags attached.
Test case numberbugs xde bug33737

Attached Files

  • image.png (139,750 bytes)

Activities

git

2024-06-08 16:45

administrator   ~0116003

Branch CR33737 has been created by dpasukhi.

SHA-1: 8fd0ae07fd626081a0f971f805c5f0fc20965bac


Detailed log of new commits:

Author: dpasukhi
Date: Sat Jun 8 13:43:24 2024 +0000

    0033737: Data Exchange, XCAF - Implementing filter tree functionality
    
    Implement base functionality to filter tree with input label to keep.
    TODO: test cases

git

2024-06-09 00:06

administrator   ~0116005

Branch CR33737 has been updated forcibly by dpasukhi.

SHA-1: 8dd5eb82a7d0b4688ba0427c22779db9a23fe297

dpasukhi

2024-06-09 00:07

administrator   ~0116006

Dear Ika,
please look into my changes.
OCCT: 33737

I tested with some files and it looks fine.
What do you think, it is fine to use something like this?
I will add some test cases on lovely step file if it will be fine from your side.

git

2024-06-11 12:37

administrator   ~0116016

Branch CR33737 has been updated forcibly by dpasukhi.

SHA-1: ec8e0eb4105c26c271565406f1f9c471fd317a90

ika

2024-06-11 19:40

manager   ~0116023

Dear dpasukhi,

I tried to imagine problems with such a filtered shape tree, but I didn't find any, the solution is OK for me. The only remark is, do you care only about the assembly tree? GDTs and Notes will be corrupted after such an action. Please update these relations also or add an appropriate comment in the method description.

Also, I have a couple of remarks:

1)
+//=======================================================================
+//function : Extract
+//purpose :
+//=======================================================================
wrong name in the method header.

XCAFDoc_Editor.hxx
2) It is not so easy to recognize up-down relations in the description and names, there is no mistake, maybe it will be more human-readable after reformulation in child-parent words.
3) An empty line is missed before the last method.
+ Standard_EXPORT static bool GetDownRelatedShapeLabels(const TDF_Label& theLabel,
+ TDF_LabelMap& theRelatedLabels);
+ //! Filters original shape tree with keeping structure.

XCAFDoc_Editor.cxx
4) It looks like you do not need the returned result of GetUp../Down.. methods.

git

2024-06-11 20:07

administrator   ~0116026

Branch CR33737_dev has been created by dpasukhi.

SHA-1: 95d3ba836397a3d357c1c0a832261baaa5e58a4b


Detailed log of new commits:

Author: dpasukhi
Date: Tue Jun 11 17:07:31 2024 +0000

    // remark fixed

git

2024-06-11 20:10

administrator   ~0116027

Branch CR33737 has been updated forcibly by dpasukhi.

SHA-1: 2a13b5831a27b69b081bf445aeb7d847322ecff9

dpasukhi

2024-06-11 20:11

administrator   ~0116028

Dear ika, remarks fixed (see CR33737_dev)
Combined branch - CR33737

Please check

git

2024-06-11 20:27

administrator   ~0116030

Branch CR33737 has been updated forcibly by dpasukhi.

SHA-1: 8495a9ce14e22f296aec578fd5fbc91e55d061a2

dpasukhi

2024-06-11 20:27

administrator   ~0116031

Changes out-of-dev
I can't avoid a small optimization :^)
image.png (139,750 bytes)

ika

2024-06-12 13:16

manager   ~0116032

Just one more style remark, wrong indent in
XCAFDoc_Editor.cxx
+void XCAFDoc_Editor::GetChildShapeLabels(const TDF_Label& theLabel,
+ TDF_LabelMap& theRelatedLabels)

Please proceed with testing and integration after this small fix.

git

2024-06-12 13:19

administrator   ~0116033

Branch CR33737 has been updated forcibly by dpasukhi.

SHA-1: 2915afb3364ebee86fb17903b38f9f27e4221f0c

dpasukhi

2024-06-12 13:22

administrator   ~0116034

Remarks fixed, please wait before test system recovering.

dpasukhi

2024-06-27 14:04

administrator   ~0116071

PR: https://github.com/Open-Cascade-SAS/OCCT/pull/18

ika

2024-07-05 17:29

manager   ~0116129

Ready for integration.

OCCT: CR33737

git

2024-07-18 20:51

administrator   ~0116238

Branch CR33737_dev has been deleted by dpasukhi.

SHA-1: 95d3ba836397a3d357c1c0a832261baaa5e58a4b

git

2024-07-18 20:52

administrator   ~0116239

Branch CR33737 has been deleted by dpasukhi.

SHA-1: 2915afb3364ebee86fb17903b38f9f27e4221f0c

Issue History

Date Modified Username Field Change
2024-06-08 16:34 dpasukhi New Issue
2024-06-08 16:34 dpasukhi Assigned To => dpasukhi
2024-06-08 16:45 git Note Added: 0116003
2024-06-08 16:47 dpasukhi Status new => assigned
2024-06-09 00:06 git Note Added: 0116005
2024-06-09 00:07 dpasukhi Assigned To dpasukhi => ika
2024-06-09 00:07 dpasukhi Status assigned => feedback
2024-06-09 00:07 dpasukhi Note Added: 0116006
2024-06-11 12:37 git Note Added: 0116016
2024-06-11 19:40 ika Assigned To ika => dpasukhi
2024-06-11 19:40 ika Status feedback => assigned
2024-06-11 19:40 ika Note Added: 0116023
2024-06-11 20:07 git Note Added: 0116026
2024-06-11 20:10 git Note Added: 0116027
2024-06-11 20:11 dpasukhi Assigned To dpasukhi => ika
2024-06-11 20:11 dpasukhi Status assigned => resolved
2024-06-11 20:11 dpasukhi Steps to Reproduce Updated
2024-06-11 20:11 dpasukhi Note Added: 0116028
2024-06-11 20:27 git Note Added: 0116030
2024-06-11 20:27 dpasukhi Note Added: 0116031
2024-06-11 20:27 dpasukhi File Added: image.png
2024-06-12 13:16 ika Assigned To ika => dpasukhi
2024-06-12 13:16 ika Status resolved => assigned
2024-06-12 13:16 ika Note Added: 0116032
2024-06-12 13:19 git Note Added: 0116033
2024-06-12 13:22 dpasukhi Assigned To dpasukhi => ika
2024-06-12 13:22 dpasukhi Status assigned => resolved
2024-06-12 13:22 dpasukhi Note Added: 0116034
2024-06-27 14:04 dpasukhi Note Added: 0116071
2024-07-05 17:29 ika Assigned To ika => bugmaster
2024-07-05 17:29 ika Status resolved => reviewed
2024-07-05 17:29 ika Note Added: 0116129
2024-07-08 21:02 dpasukhi Status reviewed => verified
2024-07-08 21:02 dpasukhi Resolution open => fixed
2024-07-08 21:02 dpasukhi Fixed in Version => 7.9.0
2024-07-08 21:02 dpasukhi Test case number => bugs xde bug33737
2024-07-18 20:51 git Note Added: 0116238
2024-07-18 20:52 git Note Added: 0116239