0033737: Data Exchange, XCAF - Implementing filter tree functionality

Implemented base functionality to filter tree with input label to keep.